--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "presupuesto-polinya",
+  "name": "presupuesto-hospitalet",
   "version": "0.0.1",
   "author": "Fundación Civio",
   "repository": {
     "type": "git",
-    "url": "https://github.com/civio/presupuesto-polinya"
+    "url": "https://github.com/civio/presupuesto-hospitalet"
   },
   "scripts": {
     "css-build": "node-sass --output-style compressed --source-map true static/stylesheets/scss/main.scss static/stylesheets/main.css",
@@ -14,8 +14,8 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
-    "concurrently": "^5.0.0",
-    "node-sass": "^4.13.1",
-    "nodemon": "^2.0.1"
+    "concurrently": "^5.3.0",
+    "node-sass": "^4.13.0",
+    "nodemon": "^1.19.4"
   }
 }
